--- a/vignettes/hcruR.Rmd
+++ b/vignettes/hcruR.Rmd
@@ -21,7 +21,7 @@ library(hcruR)
 data(hcru_sample_data)
 
 # Step 1: Estimate HCRU
-hcru_summary = estimate_hcru(data = hcru_sample_data,
+hcru_summary <- estimate_hcru(data = hcru_sample_data,
                              cohort_col = "cohort",
                              patient_id_col = "patient_id",
                              admit_col = "admission_date",
@@ -42,16 +42,16 @@ hcru_summary = estimate_hcru(data = hcru_sample_data,
                              test = NULL,
                              gt_output = FALSE)
 # Step 3: Plot results
-p = plot_hcru(summary_df = hcru_summary$`Summary by settings using dplyr`,
-              x_var = "period",
-              y_var = "Cost",
-              cohort_col = "cohort",
-              facet_var = "care_setting",
-              facet_var_n = 3,
-              title = "Average total cost by domain and cohort",
-              x_lable = "Healthcare Setting (Domain)",
-              y_lable = "Average total cost",
-              fill_lable = "Cohort"
+p <- plot_hcru(summary_df = hcru_summary$`Summary by settings using dplyr`,
+               x_var = "period",
+               y_var = "Cost",
+               cohort_col = "cohort",
+               facet_var = "care_setting",
+               facet_var_n = 3,
+               title = "Average total cost by domain and cohort",
+               x_lable = "Healthcare Setting (Domain)",
+               y_lable = "Average total cost",
+               fill_lable = "Cohort"
 )
 
 p
