--- a/vignettes/hcruR.Rmd
+++ b/vignettes/hcruR.Rmd
@@ -29,26 +29,27 @@ head(hcru_sample_data)
 
 ```{r}
 # Step 1: Estimate HCRU
-hcru_summary <- estimate_hcru(data = hcru_sample_data,
-                             cohort_col = "cohort",
-                             patient_id_col = "patient_id",
-                             admit_col = "admission_date",
-                             discharge_col = "discharge_date",
-                             index_col = "index_date",
-                             visit_col = "visit_date",
-                             encounter_id_col = "encounter_id",
-                             setting_col = "care_setting",
-                             cost_col = "cost_usd",
-                             readmission_col = "readmission",
-                             time_window_col = "period",
-                             los_col = "length_of_stay",
-                             custom_var_list = NULL,
-                             pre_days = 180,
-                             post_days = 365,
-                             readmission_days_rule = 30,
-                             group_var = "cohort",
-                             test = NULL,
-                             gt_output = FALSE)
+hcru_summary <- estimate_hcru(data,
+                              cohort_col = "cohort",
+                              patient_id_col = "patient_id",
+                              admit_col = "admission_date",
+                              discharge_col = "discharge_date",
+                              index_col = "index_date",
+                              visit_col = "visit_date",
+                              encounter_id_col = "encounter_id",
+                              setting_col = "care_setting",
+                              cost_col = "cost_usd",
+                              readmission_col = "readmission",
+                              time_window_col = "period",
+                              los_col = "length_of_stay",
+                              custom_var_list = NULL,
+                              pre_days = 180,
+                              post_days = 365,
+                              readmission_days_rule = 30,
+                              group_var_main = "cohort",
+                              group_var_by = "care_setting",
+                              test = NULL,
+                              gt_output = FALSE)
 
 hcru_summary
 
@@ -58,26 +59,27 @@ hcru_summary
 
 ```{r,  results = 'asis'}
 # Step 1: Estimate HCRU
-hcru_summary_gt <- estimate_hcru(data = hcru_sample_data,
-                             cohort_col = "cohort",
-                             patient_id_col = "patient_id",
-                             admit_col = "admission_date",
-                             discharge_col = "discharge_date",
-                             index_col = "index_date",
-                             visit_col = "visit_date",
-                             encounter_id_col = "encounter_id",
-                             setting_col = "care_setting",
-                             cost_col = "cost_usd",
-                             readmission_col = "readmission",
-                             time_window_col = "period",
-                             los_col = "length_of_stay",
-                             custom_var_list = NULL,
-                             pre_days = 180,
-                             post_days = 365,
-                             readmission_days_rule = 30,
-                             group_var = "cohort",
-                             test = NULL,
-                             gt_output = TRUE)
+hcru_summary_gt <- estimate_hcru(data,
+                                 cohort_col = "cohort",
+                                 patient_id_col = "patient_id",
+                                 admit_col = "admission_date",
+                                 discharge_col = "discharge_date",
+                                 index_col = "index_date",
+                                 visit_col = "visit_date",
+                                 encounter_id_col = "encounter_id",
+                                 setting_col = "care_setting",
+                                 cost_col = "cost_usd",
+                                 readmission_col = "readmission",
+                                 time_window_col = "period",
+                                 los_col = "length_of_stay",
+                                 custom_var_list = NULL,
+                                 pre_days = 180,
+                                 post_days = 365,
+                                 readmission_days_rule = 30,
+                                 group_var_main = "cohort",
+                                 group_var_by = "care_setting",
+                                 test = NULL,
+                                 gt_output = TRUE)
 
 hcru_summary_gt$`Summary by settings using gtsummary`
 
