--- a/vignettes/hcruR.Rmd
+++ b/vignettes/hcruR.Rmd
@@ -23,7 +23,6 @@ library(hcruR)
 data(hcru_sample_data)
 data <- hcru_sample_data
 head(hcru_sample_data)
-
 ```
 
 ### Generate HCRU summary using dplyr (this can be used for create HCRU plots)
@@ -31,30 +30,30 @@ head(hcru_sample_data)
 ```{r}
 # Step 1: Estimate HCRU
 hcru_summary <- estimate_hcru(data,
-                          cohort_col = "cohort",
-                          patient_id_col = "patient_id",
-                          admit_col = "admission_date",
-                          discharge_col = "discharge_date",
-                          index_col = "index_date",
-                          visit_col = "visit_date",
-                          encounter_id_col = "encounter_id",
-                          setting_col = "care_setting",
-                          cost_col = "cost_usd",
-                          readmission_col = "readmission",
-                          time_window_col = "period",
-                          los_col = "length_of_stay",
-                          custom_var_list = NULL,
-                          pre_days = 180,
-                          post_days = 365,
-                          readmission_days_rule = 30,
-                          group_var_main = "cohort",
-                          group_var_by = "care_setting",
-                          test = NULL,
-                          timeline = "pre1",
-                          gt_output = FALSE)
+  cohort_col = "cohort",
+  patient_id_col = "patient_id",
+  admit_col = "admission_date",
+  discharge_col = "discharge_date",
+  index_col = "index_date",
+  visit_col = "visit_date",
+  encounter_id_col = "encounter_id",
+  setting_col = "care_setting",
+  cost_col = "cost_usd",
+  readmission_col = "readmission",
+  time_window_col = "period",
+  los_col = "length_of_stay",
+  custom_var_list = NULL,
+  pre_days = 180,
+  post_days = 365,
+  readmission_days_rule = 30,
+  group_var_main = "cohort",
+  group_var_by = "care_setting",
+  test = NULL,
+  timeline = "pre1",
+  gt_output = FALSE
+)
 
 hcru_summary
-
 ```
 
 ### Generate HCRU summary using gtsummary (a publication ready output) 
@@ -62,46 +61,47 @@ hcru_summary
 ```{r,  results = 'asis'}
 # Step 1: Estimate HCRU
 hcru_summary_gt <- estimate_hcru(data,
-                          cohort_col = "cohort",
-                          patient_id_col = "patient_id",
-                          admit_col = "admission_date",
-                          discharge_col = "discharge_date",
-                          index_col = "index_date",
-                          visit_col = "visit_date",
-                          encounter_id_col = "encounter_id",
-                          setting_col = "care_setting",
-                          cost_col = "cost_usd",
-                          readmission_col = "readmission",
-                          time_window_col = "period",
-                          los_col = "length_of_stay",
-                          custom_var_list = NULL,
-                          pre_days = 180,
-                          post_days = 365,
-                          readmission_days_rule = 30,
-                          group_var_main = "cohort",
-                          group_var_by = "care_setting",
-                          test = NULL,
-                          timeline = "pre1",
-                          gt_output = TRUE)
+  cohort_col = "cohort",
+  patient_id_col = "patient_id",
+  admit_col = "admission_date",
+  discharge_col = "discharge_date",
+  index_col = "index_date",
+  visit_col = "visit_date",
+  encounter_id_col = "encounter_id",
+  setting_col = "care_setting",
+  cost_col = "cost_usd",
+  readmission_col = "readmission",
+  time_window_col = "period",
+  los_col = "length_of_stay",
+  custom_var_list = NULL,
+  pre_days = 180,
+  post_days = 365,
+  readmission_days_rule = 30,
+  group_var_main = "cohort",
+  group_var_by = "care_setting",
+  test = NULL,
+  timeline = "pre1",
+  gt_output = TRUE
+)
 
 hcru_summary_gt$`Summary by settings using gtsummary`
-
 ```
 
 
 ### Generate the HCRU plot: total visits by cohort and time-line
 
 ```{r}
-p1 <- plot_hcru(summary_df = hcru_summary$`Summary by settings using dplyr`,
-                         x_var = "time_window",
-                         y_var = "Visits",
-                         cohort_col = "cohort",
-                         facet_var = "care_setting",
-                         facet_var_n = 3,
-                         title = "Total visits by domain and cohort",
-                         x_label = "Healthcare Setting (Domain)",
-                         y_label = "Total visit",
-                         fill_label = "Cohort"
+p1 <- plot_hcru(
+  summary_df = hcru_summary$`Summary by settings using dplyr`,
+  x_var = "time_window",
+  y_var = "Visits",
+  cohort_col = "cohort",
+  facet_var = "care_setting",
+  facet_var_n = 3,
+  title = "Total visits by domain and cohort",
+  x_label = "Healthcare Setting (Domain)",
+  y_label = "Total visit",
+  fill_label = "Cohort"
 )
 
 p1
@@ -110,16 +110,17 @@ p1
 ### Generate HCRU plot for total cost by cohort and timeline
 
 ```{r}
-p2 <- plot_hcru(summary_df = hcru_summary$`Summary by settings using dplyr`,
-                         x_var = "time_window",
-                         y_var = "Cost",
-                         cohort_col = "cohort",
-                         facet_var = "care_setting",
-                         facet_var_n = 3,
-                         title = "Total cost by domain and cohort",
-                         x_label = "Healthcare Setting (Domain)",
-                         y_label = "Total cost",
-                         fill_label = "Cohort"
+p2 <- plot_hcru(
+  summary_df = hcru_summary$`Summary by settings using dplyr`,
+  x_var = "time_window",
+  y_var = "Cost",
+  cohort_col = "cohort",
+  facet_var = "care_setting",
+  facet_var_n = 3,
+  title = "Total cost by domain and cohort",
+  x_label = "Healthcare Setting (Domain)",
+  y_label = "Total cost",
+  fill_label = "Cohort"
 )
 
 p2
